--- a/metric/templates/stats/index.html
+++ b/metric/templates/stats/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'stats/base.html' %}
 {% load staticfiles i18n %}
 {% block title %}{% trans 'Stats' %} - {{ block.super }}{% endblock %}
 
@@ -9,16 +9,6 @@
 {% endblock %}
 
 {% block content %}
-    {% if user.is_superuser %}
-        {% trans 'Real-time' %}:
-        <ul>
-            <li><a href="{% url 'stats:case_created' %}">{% trans 'Cases created' %}</a></li>
-            <li><a href="{% url 'stats:case_reaction' %}">{% trans 'Cases reaction time' %}</a></li>
-            <li><a href="{% url 'stats:case_unanswered' %}">{% trans 'Cases unanswered' %}</a></li>
-            <li><a href="{% url 'stats:letter_created' %}">{% trans 'Letters created' %}</a></li>
-            <li><a href="{% url 'stats:user_registered' %}">{% trans 'Users registered' %}</a></li>
-        </ul>
-    {% endif %}
     {% if item_list %}
         {% trans 'Items' %}:
         <ul>
