--- a/metric/templates/stats/item_details.html
+++ b/metric/templates/stats/item_details.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'stats/base.html' %}
 {% load staticfiles i18n metric_tags %}
 {% block title %}{{ item }} - {{ block.super }}{% endblock %}
 
@@ -27,7 +27,7 @@
 {% endblock %}
 {% block breadcrumbs %}
     <ol class="breadcrumb">
-        <li><a href="{% url 'stats:index' %}">{% trans 'Stats' %}</a></li>
+        <li><a href="{% url 'metric:index' %}">{% trans 'Stats' %}</a></li>
         <li class="active">{{ item }}</li>
     </ol>
 {% endblock %}
@@ -39,11 +39,11 @@
         </div>
         <div class="pull-right">
             <div class="btn-group" role="group">
-                <a href="{% url 'stats:item_detail_csv' key=item.key month=today.month year=today.year %}"
+                <a href="{% url 'metric:item_detail_csv' key=item.key month=today.month year=today.year %}"
                    class="btn btn-success">
                     <i class="fa fa-download"></i> {% trans 'CSV' %}
                 </a>
-                <a href="{% url 'stats:item_detail_json' key=item.key month=today.month year=today.year %}"
+                <a href="{% url 'metric:item_detail_json' key=item.key month=today.month year=today.year %}"
                    class="btn btn-success">
                     <i class="fa fa-download"></i> {% trans 'JSON' %}
                 </a>
