Add badges, add templates paths, fix random fail of test

--- a/metric/templates/metric/index.html
+++ b/metric/templates/metric/index.html
@@ -1,4 +1,4 @@
-{% extends 'stats/base.html' %}
+{% extends 'metric/base.html' %}
 {% load staticfiles i18n %}
 {% block title %}{% trans 'Stats' %} - {{ block.super }}{% endblock %}
 
