--- a/metric/templates/metric/item_details.html
+++ b/metric/templates/metric/item_details.html
@@ -1,4 +1,4 @@
-{% extends 'stats/base.html' %}
+{% extends 'metric/base.html' %}
 {% load staticfiles i18n metric_tags %}
 {% block title %}{{ item }} - {{ block.super }}{% endblock %}
 
